<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    public function up(): void {
        Schema::create('commentaires', function (Blueprint $table) {
            $table->id();
            $table->foreignId('biscuit_id')->constrained('biscuits')->restrictOnDelete()->restrictOnUpdate();
            $table->text('contenu');
            $table->string('auteur_affiche', 150);
            $table->softDeletes();
            $table->timestamps();
        });
    }
    public function down(): void {
        Schema::dropIfExists('commentaires');
    }
};
